deployments/inspektor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inspektor
  namespace: dev
spec:
  selector:
    app: inspektor
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
