deployments/inspektor-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inspektor-ingress
  namespace: dev
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inspektor
                port:
                  number: 80
